--- a/style.css
+++ b/style.css
@@ -4,14 +4,6 @@
     font-family: sans-serif;
 }
 
-.banner {
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(zbackground.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
 .navbar{
     width: 85%;
     margin: auto;
@@ -29,14 +21,15 @@
 .navbar ul li {
     list-style: none;
     display: inline-block;
-    margin: 0 20px;
+    margin: 0 40px;
     position: relative;
 }
 
 .navbar ul li a {
     text-decoration: none;
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
+    font-weight: 500;
 }
 
 .navbar ul li::after {
