--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    position: relative; 
 }
 
 video {
     width: 100%;
     height: 550px;
     object-fit: cover;
+}
+
+#logo {
+    position: absolute; 
+    top: 0; 
+    right: 0; 
+    z-index: 1;
 }
