--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    position: relative; 
+    position: relative;
 }
 
 video {
@@ -12,8 +12,8 @@ video {
 }
 
 #logo {
-    position: absolute; 
+    position: fixed; 
     top: 0; 
     right: 0; 
-    z-index: 1;
+    z-index: 1; 
 }
