--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@ video {
 }
 
 #logo {
-    position: fixed; 
-    top: 0; 
-    right: 0; 
-    z-index: 1; 
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100px; 
+    height: auto; 
 }
