--- a/style.css
+++ b/style.css
@@ -16,6 +16,29 @@ video {
     z-index: 1;
     width: 250px; 
     height: auto; 
-    margin-top: 11px;
-    margin-right: 11px;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+.slidier {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.videos {
+    display: flex;
+    overflow: hidden;
+}
+
+video {
+    width: 100%;
+    max-width: 800px;
+    display: none;
+}
+
+button {
+    margin: 10px;
 }
