--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ video {
     min-height: 50vh;
     background-size: cover;
     position: relative;
-    width: 500px; /* Increased width */
-    height: 100px; /* Further reduced height */
+    width: 500px; 
+    height: 100px; 
     transform-style: preserve-3d;
     animation: animate 20s linear infinite;
-    margin: 0 auto; /* Center the .box horizontally */
+    margin: 0 auto; 
 }
 
 .swiper-container {
