--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
@@ -55,6 +56,6 @@ video {
 
 .swiper-video {
     width: 100%;
-    height: 400px;
+    height: 100%;
     object-fit: cover;
 }
