--- a/style.css
+++ b/style.css
@@ -27,4 +27,12 @@ video {
     margin-right: 20px;
 }
 
-section
+section {
+    padding: 70px;
+    height: 100vh;
+    display: flex;
+    align-items: center;   
+    justify-content: center;
+    position: relative;   
+}
+
