--- a/style.css
+++ b/style.css
@@ -44,3 +44,9 @@ section {
     border-radius: 20px;
     box-shadow: 1px -1px 20px #28272780;
 }
+
+.swiper-slide {
+    max-width: 800px;
+    width: 100%;
+    transition: width 700ms ease;
+}
