--- a/style.css
+++ b/style.css
@@ -1,127 +1,126 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Times New Roman", Times, serif;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 video {
-    width: 100%;
-    height: 525px;
-    object-fit: cover;
+  width: 100%;
+  height: 525px;
+  object-fit: cover;
 }
 
 #logo {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 1;
-    width: 250px; 
-    height: auto; 
-    margin-top: 20px;
-    margin-right: 20px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 250px;
+  height: auto;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
 section {
-    padding: 70px;
-    height: 70vh;
-    display: flex;
-    align-items: center;   
-    justify-content: center;
-    position: relative;   
+  padding: 70px;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .slider-video {
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    line-height: 0;
-    border-radius: 20px;
-    box-shadow: 1px -1px 20px #28272780;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  line-height: 0;
+  border-radius: 20px;
+  box-shadow: 1px -1px 20px #49484880;
 }
 
 .swiper-slide {
-    max-width: 800px;
-    width: 100%;
-    transition: width 700ms ease;
+  max-width: 800px;
+  width: 100%;
+  transition: width 700ms ease;
 }
 
 .swiper-slide video {
-    width: 100%;
+  width: 100%;
 }
 
 .swiper-btns {
-    max-width: 880px;
-    width: 100%;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    line-height: 0;
+  max-width: 880px;
+  width: 100%;
+  height: 70px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  line-height: 0;
 }
 
 [class*="swiper-button"] {
-    width: 70px;
-    height: 70px; 
-    border-radius: 50%;
-    display: inline-flex;
-    background-color: #8d8cff;
-    color: #fff;
-    margin-top: 0;
-    top: 0;
-    --swiper-navigation-size: 50px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: inline-flex;
+  color: #fff;
+  margin-top: 0;
+  top: 0;
+  --swiper-navigation-size: 60px;
 }
 
 [class*="swiper-button"]:hover {
-    background-color: #6e6df7;
+  background-color: #6e6df7;
 }
 
 h3 {
-    position: absolute;
-    display: inline-block;
-    overflow: hidden;
-    left: 20px;
-    bottom: 20px;
-    z-index: 11;
+  position: absolute;
+  display: inline-block;
+  overflow: hidden;
+  left: 20px;
+  bottom: 20px;
+  z-index: 11;
 }
 
 h3 span {
-    display: block;
-    font-size: 40px;
-    line-height: 1;
-    font-weight: 900;
-    text-transform: uppercase;
-    color: #fff;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 2px;
-    letter-spacing: 3;
+  display: block;
+  font-size: 40px;
+  line-height: 1;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #fff;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px;
+  letter-spacing: 3;
 }
 
 h3 span small {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: 100;
-    -webkit-text-fill-color: #fff;
-    -webkit-text-stroke: 0;
-    letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 100;
+  -webkit-text-fill-color: #fff;
+  -webkit-text-stroke: 0;
+  letter-spacing: 1px;
 }
 
 h3 span small::before {
-    content: "";
-    width: 30px;
-    height: 2px;
-    background-color: #fff;
-    display: block;
+  content: "";
+  width: 30px;
+  height: 2px;
+  background-color: #fff;
+  display: block;
 }
