--- a/style.css
+++ b/style.css
@@ -80,10 +80,11 @@ section {
   margin-top: 0;
   top: 0;
   --swiper-navigation-size: 60px;
+  transition: 0.5s;
 }
 
 [class*="swiper-button"]:hover {
-  background-color: #6e6df7;
+  color: rgb(33, 33, 187);
 }
 
 h3 {
@@ -123,4 +124,43 @@ h3 span small::before {
   height: 2px;
   background-color: #fff;
   display: block;
+}
+
+.preloader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s;
+}
+
+.preloader-inner {
+  text-align: center;
+}
+
+.preloader-spinner {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db; 
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+body.loaded .preloader {
+  opacity: 0;
+  pointer-events: none;
 }
