adding preloader before website is loaded

--- a/style.css
+++ b/style.css
@@ -187,9 +187,9 @@ body.loaded .preloader {
 .welcome-text {
   text-align: center;
   font-size: 24px;
-  color: #fff; /* Text color */
+  color: #fff; 
   position: absolute;
-  top: 50%; /* Center vertically */
-  left: 50%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Center the text */
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%); 
 }
