--- a/style.css
+++ b/style.css
@@ -155,9 +155,9 @@ h3 span small::before {
 
 .preloader-spinner {
   border-radius: 50%;
-  width: 150px; 
+  width: 180px; 
   height: 120px; 
-  animation: fill 5s linear forwards;
+  animation: fill 2s linear forwards;
   transform-origin: center;
 }
 
@@ -166,6 +166,7 @@ h3 span small::before {
   font-size: 24px;
   color: #333;
   text-align: center;
+  animation: dots 1.5s infinite; 
 }
 
 @keyframes fill {
