--- a/style.css
+++ b/style.css
@@ -42,13 +42,25 @@ section {
   overflow: hidden;
   line-height: 0;
   border-radius: 20px;
-  box-shadow: 1px -1px 20px #49484880;
 }
 
 .slider-video video {
-  width: 100%;
-  opacity: 0.5; 
-  transition: opacity 2s; 
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  line-height: 0;
+  border-radius: 20px;
+  box-shadow: 1px -1px 20px #49484880;
+  transform: scale(0.6); 
+  transition: transform 0.5s; 
+
+  &:not(.inactive) {
+    transform: scale(1);
+  }
+}
+
+.swiper-slide.inactive .slider-video video {
+  transform: scale(0.9);
 }
 
 .slider-video video.active {
@@ -57,7 +69,7 @@ section {
 
 
 .swiper-slide {
-  max-width: 800px;
+  max-width: 900px;
   width: 100%;
   transition: width 700ms ease;
 }
@@ -95,7 +107,7 @@ section {
 }
 
 [class*="swiper-button"]:hover {
-  color: rgb(33, 33, 187);
+  color: #1c6bd1;
 }
 
 h3 {
@@ -155,7 +167,7 @@ h3 span small::before {
 
 .preloader-spinner {
   border-radius: 50%;
-  width: 180px; 
+  width: 200px; 
   height: 120px; 
   animation: fill 2s linear forwards;
   transform-origin: center;
