--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   padding: 0;
 }
 
+#loading-text {
+  color: #3498db;
+  font-size: 30px;
+}
+
 video {
   width: 100%;
   height: 525px;
@@ -27,6 +32,8 @@ video {
   margin-right: 20px;
 }
 
+
+
 section {
   padding: 70px;
   height: 70vh;
@@ -34,6 +41,15 @@ section {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+.hidden {
+  opacity: 0;
+  transition: all 2s;
+}
+
+.show {
+  opacity: 1;
 }
 
 .slider-video {
