--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ section {
   opacity: 1;
 }
 
+
 .slider-video {
   position: relative;
   z-index: 1;
@@ -221,4 +222,66 @@ body.loaded .preloader {
   top: 50%;
   left: 50%; 
   transform: translate(-50%, -50%); 
+}
+
+.bottom-to-top {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.bottom-to-top.animated {
+  opacity: 1; 
+  transform: translateY(0); 
+}
+
+
+
+
+:root {
+  --length: 0;
+}
+
+html {
+  scroll-behavior: smooth; /* Keep smooth scrolling for anchor links */
+  overscroll-behavior: none; /* Disable overshooting for smoother scrolling */
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  color: #201e21;
+  text-transform: uppercase;
+  background-color: #FCF6F6;
+  overscroll-behavior: none; /* Disable overshooting for smoother scrolling */
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #FCF6F6;
+  border-bottom: 1px solid 201e21;
+  scroll-snap-align: start;
+}
+
+.svg-section {
+  min-height: 430px;
+}
+
+.container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth; 
+}
+
+#videoPlayer {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transform: scale(0.9);
 }
