--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 video {
   width: 100%;
-  height: 525px;
+  height: 610px;
   object-fit: cover;
 }
 
@@ -238,22 +238,23 @@ body.loaded .preloader {
 
 
 
+/* gihdfugrgpihrgwopirgojpigojiwgropijwo[jioijgoji[wgrtjoi[ */
+
 :root {
   --length: 0;
 }
 
 html {
-  scroll-behavior: smooth; /* Keep smooth scrolling for anchor links */
-  overscroll-behavior: none; /* Disable overshooting for smoother scrolling */
+  scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
 
 body {
-  margin: 0;
+  margin: 0; 
   padding: 0;
   color: #201e21;
-  text-transform: uppercase;
   background-color: #FCF6F6;
-  overscroll-behavior: none; /* Disable overshooting for smoother scrolling */
+  overscroll-behavior: none; 
 }
 
 .section {
@@ -282,6 +283,9 @@ body {
 #videoPlayer {
   width: 100%;
   height: 100%;
-  background-color: black;
   transform: scale(0.9);
+}
+
+.video-container {
+  background-color: black;
 }
